[gd_scene load_steps=69 format=2]

[ext_resource path="res://Assets/Enemies/Skeleton/Idle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Combat/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/Skeleton.gd" type="Script" id=3]
[ext_resource path="res://Assets/Enemies/Skeleton/Take Hit.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Combat/DetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemies/Skeleton/Walk.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Skeleton/Attack.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Combat/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Script/HitboxEnemy.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Utils/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Enemies/Skeleton/Death.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 36.4722
height = 44.1837

[sub_resource type="Animation" id=27]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Position2DHitBox/Hitbox/CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Position2DHitBox/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=28]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=29]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hit" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_animation_finished"
} ]
}

[sub_resource type="Animation" id=30]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=31]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=32]
radius = 14.9321
height = 53.3729

[sub_resource type="CapsuleShape2D" id=33]
radius = 12.0972
height = 54.8481

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachine" id=55]
states/attack/node = SubResource( 34 )
states/attack/position = Vector2( 539, 177 )
states/death/node = SubResource( 35 )
states/death/position = Vector2( 361, 330 )
states/hit/node = SubResource( 36 )
states/hit/position = Vector2( 416, 84 )
states/idle/node = SubResource( 37 )
states/idle/position = Vector2( 213, 91 )
states/walk/node = SubResource( 38 )
states/walk/position = Vector2( 342, 197 )
transitions = [ "idle", "hit", SubResource( 39 ), "hit", "idle", SubResource( 40 ), "idle", "walk", SubResource( 41 ), "walk", "idle", SubResource( 42 ), "walk", "hit", SubResource( 43 ), "hit", "walk", SubResource( 44 ), "idle", "attack", SubResource( 45 ), "walk", "attack", SubResource( 46 ), "attack", "walk", SubResource( 47 ), "attack", "idle", SubResource( 48 ), "attack", "hit", SubResource( 49 ), "hit", "attack", SubResource( 50 ), "idle", "death", SubResource( 51 ), "walk", "death", SubResource( 52 ), "attack", "death", SubResource( 53 ), "hit", "death", SubResource( 54 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=56]

[sub_resource type="CircleShape2D" id=57]
radius = 153.395

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 25 )
animation = "attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/attack = SubResource( 27 )
anims/death = SubResource( 28 )
anims/hit = SubResource( 29 )
anims/idle = SubResource( 30 )
anims/walk = SubResource( 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.81946, 1.88988 )
shape = SubResource( 32 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Hurtbox" parent="Position2D" instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Position2D/Hurtbox" index="0"]
position = Vector2( 7.55954, 2.83482 )
scale = Vector2( 1.5, 1 )
shape = SubResource( 33 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 55 )
anim_player = NodePath("../AnimatedSprite/AnimationPlayer")
parameters/playback = SubResource( 56 )

[node name="DetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
position = Vector2( 104.47, -1.47228 )
shape = SubResource( 57 )

[node name="Position2DHitBox" type="Position2D" parent="."]

[node name="Hitbox" parent="Position2DHitBox" instance=ExtResource( 8 )]
collision_mask = 4
script = ExtResource( 9 )

[node name="CollisionShape2D" parent="Position2DHitBox/Hitbox" index="0"]
position = Vector2( 72.6679, -4.49496 )
shape = SubResource( 26 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 10 )]
max_health = 70

[node name="RayCastX" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2( 72.8808, -2.56424 )
enabled = true

[connection signal="area_entered" from="Position2D/Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Position2D/Hurtbox"]
[editable path="DetectionZone"]
[editable path="Position2DHitBox/Hitbox"]
